wip(enforcement): preserve current state before domain gate hardening